tests/rosetta/out/Java/apply-a-digital-filter-direct-form-ii-transposed-.error
javac error: exit status 1
/tmp/TestMochiToJavaapply-a-digital-filter-direct-form-ii-transposed-2936695473/001/ApplyADigitalFilterDirectFormIiTransposed.java:16: error: bad operand types for binary operator '*'
                tmp = tmp + ((Number)((Number)b.get(j)).doubleValue() * ((Number)input.get(i - j)).doubleValue()).doubleValue();
                                                                      ^
  first type:  Number
  second type: double
/tmp/TestMochiToJavaapply-a-digital-filter-direct-form-ii-transposed-2936695473/001/ApplyADigitalFilterDirectFormIiTransposed.java:21: error: bad operand types for binary operator '*'
                tmp = tmp - ((Number)((Number)a.get(j + 1)).doubleValue() * ((Number)out.get(i - j - 1)).doubleValue()).doubleValue();
                                                                          ^
  first type:  Number
  second type: double
2 errors
